<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/NavPage"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleText"
        android:visibility="gone"
        android:text="@string/pay_by_wx_title" />

    <Button
        android:id="@+id/unifiedorder_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:text="@string/unifiedorder_v3_wx" />



    <Button
        android:visibility="gone"
            android:id="@+id/appay_pre_btn"
            style="@style/MMLineActionButton"
            android:layout_margin="10dp"
            android:text="@string/pay__pre_by_wxap" />
    <Button
        android:visibility="gone"
            android:id="@+id/appay_btn"
            style="@style/MMLineActionButton"
            android:layout_margin="10dp"
            android:text="@string/pay_by_wxap" />



    <TextView
        android:visibility="gone"
        android:id="@+id/editText_prepay_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </TextView>

    

</LinearLayout>