<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_bombbox"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/title_alert"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/message"
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:minHeight="120.0dip"
                android:paddingBottom="15.0dip"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip"
                android:paddingTop="15.0dip" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal" >

   
            
            <com.cn.fit.util.FButton
                android:id="@+id/positiveButton"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:minHeight="@dimen/demo_button_min_height"
                android:minWidth="@dimen/demo_button_min_width"
                android:text="@string/ok"
                android:textSize="@dimen/text_size_16"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/blue_second"
                fbutton:cornerRadius="120dp"
                fbutton:shadowEnabled="false" />

            <com.cn.fit.util.FButton
                android:id="@+id/negativeButton"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:minHeight="@dimen/demo_button_min_height"
                android:minWidth="@dimen/demo_button_min_width"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_16"
                fbutton:cornerRadius="120dp"
                android:textColor="@android:color/white"
                fbutton:buttonColor="@color/blue_third"
                fbutton:shadowEnabled="false" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>